--- a/snowplow-mini-dinhphu/kafka/docker/docker-compose.yaml
+++ b/snowplow-mini-dinhphu/kafka/docker/docker-compose.yaml
@@ -1,18 +1,24 @@
 version: '2'
 services:
   zookeeper:
+    container_name: zookeeper
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - 22181:2181
+    networks:
+      - snowplow
   kafka1:
+    container_name: kafka1
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
       - 29092:29092
+    networks:
+      - snowplow
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -22,11 +28,14 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
 
   kafka2:
+    container_name: kafka2
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
       - 29093:29093
+    networks:
+      - snowplow
     environment:
       KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -36,11 +45,14 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
 
   kafka3:
+    container_name: kafka3
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
       - 29094:29094
+    networks:
+      - snowplow
     environment:
       KAFKA_BROKER_ID: 3
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -48,3 +60,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+
+networks:
+  snowplow:
+    external: true
