--- a/customer-data-platform/docker-compose.yaml
+++ b/customer-data-platform/docker-compose.yaml
@@ -108,24 +108,6 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
 
-  kafka3:
-    container_name: kafka3
-    image: confluentinc/cp-kafka:latest
-    restart: always
-    depends_on:
-      - zookeeper
-    ports:
-      - 29094:29094
-    networks:
-      - snowplow
-    environment:
-      KAFKA_BROKER_ID: 3
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9094,PLAINTEXT_HOST://localhost:29094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
-
   elasticsearch1:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.6.1
     container_name: elasticsearch1
@@ -137,8 +119,8 @@ services:
       - "node.name=elasticsearch1"
       - "bootstrap.memory_lock=true"
       - "cluster.name=es-cluster"
-      - "discovery.seed_hosts=elasticsearch2,elasticsearch3"
-      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3"
+      - "discovery.seed_hosts=elasticsearch2"
+      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2"
       - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
       - "xpack.security.enabled=false"
       - "xpack.security.http.ssl.enabled=false"
@@ -170,43 +152,8 @@ services:
       - "node.name=elasticsearch2"
       - "bootstrap.memory_lock=true"
       - "cluster.name=es-cluster"
-      - "discovery.seed_hosts=elasticsearch1,elasticsearch3"
-      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3"
-      - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
-      - "xpack.security.enabled=false"
-      - "xpack.security.http.ssl.enabled=false"
-      - "xpack.security.transport.ssl.enabled=false"
-    depends_on:
-      - elasticsearch1
-    networks:
-      - snowplow
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
-      interval: 30s
-      timeout: 10s
-      retries: 30
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    deploy:
-      resources:
-        limits:
-          memory: 512m
-
-  elasticsearch3:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.6.1
-    container_name: elasticsearch3
-    hostname: elasticsearch3
-    restart: always
-    ports: 
-      - "9202:9200"
-    environment:
-      - "node.name=elasticsearch3"
-      - "bootstrap.memory_lock=true"
-      - "cluster.name=es-cluster"
-      - "discovery.seed_hosts=elasticsearch2,elasticsearch3"
-      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3"
+      - "discovery.seed_hosts=elasticsearch1"
+      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2"
       - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
       - "xpack.security.enabled=false"
       - "xpack.security.http.ssl.enabled=false"
@@ -234,7 +181,7 @@ services:
     container_name: kibana
     restart: always
     environment:
-      - 'ELASTICSEARCH_HOSTS=["http://elasticsearch1:9200","http://elasticsearch2:9200","http://elasticsearch3:9200"]'
+      - 'ELASTICSEARCH_HOSTS=["http://elasticsearch1:9200","http://elasticsearch2:9200"]'
       - "SERVER_NAME=localhost"
       - "SERVER_PUBLICBASEURL=http://localhost:5601"
     ports:
