--- a/snowplow-mini-dinhphu/elasticsearch/docker/docker-compose.yaml
+++ b/snowplow-mini-dinhphu/elasticsearch/docker/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
       - "node.name=elasticsearch1"
       - "bootstrap.memory_lock=true"
       - "cluster.name=es-cluster"
-      - "discovery.seed_hosts=elasticsearch2,elasticsearch3"
-      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3"
+      - "discovery.seed_hosts=elasticsearch2"
+      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2"
       - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
       - "xpack.security.enabled=false"
       - "xpack.security.http.ssl.enabled=false"
@@ -41,35 +41,8 @@ services:
       - "node.name=elasticsearch2"
       - "bootstrap.memory_lock=true"
       - "cluster.name=es-cluster"
-      - "discovery.seed_hosts=elasticsearch1,elasticsearch3"
-      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3"
-      - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
-      - "xpack.security.enabled=false"
-      - "xpack.security.http.ssl.enabled=false"
-      - "xpack.security.transport.ssl.enabled=false"
-
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
-      interval: 30s
-      timeout: 10s
-      retries: 30
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-
-  elasticsearch3:
-    image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
-    container_name: elasticsearch3
-    hostname: elasticsearch3
-    ports: 
-      - "9202:9200"
-    environment:
-      - "node.name=elasticsearch3"
-      - "bootstrap.memory_lock=true"
-      - "cluster.name=es-cluster"
-      - "discovery.seed_hosts=elasticsearch2,elasticsearch3"
-      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3"
+      - "discovery.seed_hosts=elasticsearch1"
+      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2"
       - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
       - "xpack.security.enabled=false"
       - "xpack.security.http.ssl.enabled=false"
@@ -89,7 +62,7 @@ services:
     image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
     container_name: kibana
     environment:
-      - 'ELASTICSEARCH_HOSTS=["http://elasticsearch1:9200","http://elasticsearch2:9200","http://elasticsearch3:9200"]'
+      - 'ELASTICSEARCH_HOSTS=["http://elasticsearch1:9200","http://elasticsearch2:9200"]'
       - "SERVER_NAME=localhost"
       - "SERVER_PUBLICBASEURL=http://localhost:5601"
     ports:
