--- a/loader-kafka/pom.xml
+++ b/loader-kafka/pom.xml
@@ -91,6 +91,12 @@
       <version>3.4.0</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library -->
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>2.13.10</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
     <dependency>
