--- a/loader-kafka/pom.xml
+++ b/loader-kafka/pom.xml
@@ -71,31 +71,41 @@
       <version>2.12.5</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_2.13</artifactId>
-      <version>3.4.0</version>
-      <scope>provided</scope>
+      <artifactId>spark-core_2.12</artifactId>
+      <version>3.2.0</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>log4j</artifactId>
+          <groupId>log4j</groupId>
+        </exclusion>
+      </exclusions>
+
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka-0-10 -->
+
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming-kafka-0-10_2.13</artifactId>
-      <version>3.4.0</version>
+      <artifactId>spark-streaming-kafka-0-10_2.12</artifactId>
+      <version>3.2.0</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming -->
+
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming_2.13</artifactId>
-      <version>3.4.0</version>
-      <scope>provided</scope>
+      <artifactId>spark-sql_2.12</artifactId>
+      <version>3.2.0</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library -->
+
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming_2.12</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
-      <version>2.13.10</version>
+      <version>2.12.2</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
