--- a/customer-data-platform/docker-compose.yaml
+++ b/customer-data-platform/docker-compose.yaml
@@ -1,34 +1,34 @@
 services:
 
 # book-shop
-  mongodb:
-    image: mongo
-    container_name: mongodb
-    restart: always
+  mysqldb:
+    image: dinhphu/bookshop-backend-mysql:1.0.0
+    container_name: mysqldb
+    # restart: always
     ports:
-      - 27017:27017
+      - 3306:3306
     networks:
       - snowplow
 
   bookshop-backend:
-    image: dinhphu/bookshop-be
+    image: dinhphu/bookshop-backend:1.0.0
     container_name: bookshop-backend
-    restart: always
+    # restart: always
     environment:
-      - DB_HOST=mongodb
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysqldb:3306/customer-data-platform
     depends_on:
-      - mongodb
+      - mysqldb
     ports:
       - 10000:10000
     networks:
       - snowplow
 
   bookshop-frontend:
-    image: dinhphu/bookshop-fe
+    image: dinhphu/bookshop-frontend:1.0.0
     container_name: bookshop-frontend
-    restart: always
+    # restart: always
     environment:
-      - BACKEND_HOST=backend
+      - BACKEND_HOST=bookshop-backend
       - COLLECTOR_HOST=collector
     depends_on:
       - bookshop-backend
@@ -38,11 +38,11 @@ services:
       - snowplow
 
   bookshop-admin:
-    image: dinhphu/bookshop-admin
+    image: dinhphu/bookshop-admin:1.0.0
     container_name: bookshop-admin
-    restart: always
+    # restart: always
     environment:
-      - BACKEND_HOST=backend
+      - BACKEND_HOST=bookshop-backend
     depends_on:
       - bookshop-backend
     ports:
@@ -52,9 +52,9 @@ services:
 
 # các phần phụ trợ liên quan
   postgresdb:
-    image: dinhphu/iglu-postgres
+    image: dinhphu/iglu-postgres:1.0.0
     container_name: postgresdb
-    restart: always
+    # restart: always
     ports:
       - 5432:5432
     networks:
@@ -63,7 +63,7 @@ services:
   zookeeper:
     container_name: zookeeper
     image: confluentinc/cp-zookeeper:latest
-    restart: always
+    # restart: always
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -75,7 +75,7 @@ services:
   kafka1:
     container_name: kafka1
     image: confluentinc/cp-kafka:latest
-    restart: always
+    # restart: always
     depends_on:
       - zookeeper
     ports:
@@ -93,7 +93,7 @@ services:
   kafka2:
     container_name: kafka2
     image: confluentinc/cp-kafka:latest
-    restart: always
+    # restart: always
     depends_on:
       - zookeeper
     ports:
@@ -112,7 +112,7 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.6.1
     container_name: elasticsearch1
     hostname: elasticsearch1
-    restart: always
+    # restart: always
     ports: 
       - "9200:9200"
     environment:
@@ -145,7 +145,7 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.6.1
     container_name: elasticsearch2
     hostname: elasticsearch2
-    restart: always
+    # restart: always
     ports: 
       - "9201:9200"
     environment:
@@ -179,7 +179,7 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:8.6.1
     container_name: kibana
-    restart: always
+    # restart: always
     environment:
       - 'ELASTICSEARCH_HOSTS=["http://elasticsearch1:9200","http://elasticsearch2:9200"]'
       - "SERVER_NAME=localhost"
@@ -191,9 +191,9 @@ services:
 
 # snowplow
   iglu-server:
-    image: dinhphu/snowplow-iglu
+    image: dinhphu/snowplow-iglu:1.0.0
     container_name: iglu-server
-    restart: always
+    # restart: always
     ports:
       - 8181:8181
     depends_on:
@@ -202,9 +202,9 @@ services:
       - snowplow
 
   collector:
-    image: dinhphu/snowplow-collector
+    image: dinhphu/snowplow-collector:1.0.0
     container_name: collector
-    restart: always
+    # restart: always
     ports:
       - 8080:8080
     depends_on:
@@ -213,9 +213,9 @@ services:
       - snowplow
   
   enrich:
-    image: dinhphu/snowplow-enrich
+    image: dinhphu/snowplow-enrich:1.0.0
     container_name: enrich
-    restart: always
+    # restart: always
     depends_on:
       - kafka1
       - iglu-server
@@ -223,9 +223,9 @@ services:
       - snowplow
 
   loader:
-    image: dinhphu/snowplow-loader
+    image: dinhphu/snowplow-loader:1.0.0
     container_name: loader
-    restart: always
+    # restart: always
     environment:
       - BOOTSTRAP_SERVERS=kafka1:9092,kafka2:9093
       - ES_HOSTS=elasticsearch1:9200,elasticsearch2:9200
