--- a/customer-data-platform/docker-compose.yaml
+++ b/customer-data-platform/docker-compose.yaml
@@ -2,13 +2,15 @@ services:
 
 # book-shop
   mysqldb:
-    image: dinhphu/bookshop-backend-mysql:1.0.0
+    image: dinhphu/bookshop-backend-mysql:1.1.0
     container_name: mysqldb
     # restart: always
     ports:
       - 3306:3306
     networks:
       - snowplow
+    volumes:
+      - ./data/mysql:/var/lib/mysql
 
   bookshop-backend:
     image: dinhphu/bookshop-backend:1.0.0
@@ -22,6 +24,8 @@ services:
       - 10000:10000
     networks:
       - snowplow
+    volumes:
+      - ./data/backend/images:/book-shop-web/backend/public/static/images
 
   bookshop-frontend:
     image: dinhphu/bookshop-frontend:1.0.0
@@ -119,8 +123,8 @@ services:
       - "node.name=elasticsearch1"
       - "bootstrap.memory_lock=true"
       - "cluster.name=es-cluster"
-      - "discovery.seed_hosts=elasticsearch2"
-      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2"
+      - "discovery.seed_hosts=elasticsearch1"
+      - "cluster.initial_master_nodes=elasticsearch1"
       - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
       - "xpack.security.enabled=false"
       - "xpack.security.http.ssl.enabled=false"
@@ -141,47 +145,47 @@ services:
         limits:
           memory: 512m
 
-  elasticsearch2:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.6.1
-    container_name: elasticsearch2
-    hostname: elasticsearch2
-    # restart: always
-    ports: 
-      - "9201:9200"
-    environment:
-      - "node.name=elasticsearch2"
-      - "bootstrap.memory_lock=true"
-      - "cluster.name=es-cluster"
-      - "discovery.seed_hosts=elasticsearch1"
-      - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2"
-      - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
-      - "xpack.security.enabled=false"
-      - "xpack.security.http.ssl.enabled=false"
-      - "xpack.security.transport.ssl.enabled=false"
-    depends_on:
-      - elasticsearch1
-    networks:
-      - snowplow
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
-      interval: 30s
-      timeout: 10s
-      retries: 30
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    deploy:
-      resources:
-        limits:
-          memory: 512m
+  # elasticsearch2:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:8.6.1
+  #   container_name: elasticsearch2
+  #   hostname: elasticsearch2
+  #   # restart: always
+  #   ports: 
+  #     - "9201:9200"
+  #   environment:
+  #     - "node.name=elasticsearch2"
+  #     - "bootstrap.memory_lock=true"
+  #     - "cluster.name=es-cluster"
+  #     - "discovery.seed_hosts=elasticsearch1"
+  #     - "cluster.initial_master_nodes=elasticsearch1,elasticsearch2"
+  #     - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
+  #     - "xpack.security.enabled=false"
+  #     - "xpack.security.http.ssl.enabled=false"
+  #     - "xpack.security.transport.ssl.enabled=false"
+  #   depends_on:
+  #     - elasticsearch1
+  #   networks:
+  #     - snowplow
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:9200"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 30
+  #   ulimits:
+  #     memlock:
+  #       soft: -1
+  #       hard: -1
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 512m
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.6.1
     container_name: kibana
     # restart: always
     environment:
-      - 'ELASTICSEARCH_HOSTS=["http://elasticsearch1:9200","http://elasticsearch2:9200"]'
+      - 'ELASTICSEARCH_HOSTS=["http://elasticsearch1:9200"]'
       - "SERVER_NAME=localhost"
       - "SERVER_PUBLICBASEURL=http://localhost:5601"
     ports:
@@ -223,12 +227,13 @@ services:
       - snowplow
 
   loader:
-    image: dinhphu/snowplow-loader:1.0.0
+    image: dinhphu/snowplow-loader:1.1.0
     container_name: loader
     # restart: always
     environment:
       - BOOTSTRAP_SERVERS=kafka1:9092,kafka2:9093
-      - ES_HOSTS=elasticsearch1:9200,elasticsearch2:9200
+      - ES_HOSTS=elasticsearch1:9200
+      - MYSQL_HOST=mysqldb
     depends_on:
       - enrich
       - kafka1
