--- a/loader-kafka/pom.xml
+++ b/loader-kafka/pom.xml
@@ -108,6 +108,12 @@
             <version>1.82</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
+
 
     </dependencies>
 
