--- a/loader-kafka/pom.xml
+++ b/loader-kafka/pom.xml
@@ -14,6 +14,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>hadoop</id>
+            <url>https://maven.admicro.vn/nexus/content/repositories/hadoop</url>
+        </repository>
+        <repository>
+            <id>hadoop2</id>
+            <url>https://maven.admicro.vn/nexus/content/repositories/ml-group</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -120,6 +131,26 @@
             <artifactId>geoip2</artifactId>
             <version>2.2.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.vcc.bigdata</groupId>
+            <artifactId>ads-common</artifactId>
+            <version>1.1.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>hadoop-core</artifactId>
+                    <groupId>org.apache.hadoop</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
 
     </dependencies>
 
