--- a/loader-kafka/pom.xml
+++ b/loader-kafka/pom.xml
@@ -150,6 +150,13 @@
             </exclusions>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.3.5</version>
+        </dependency>
+
 
     </dependencies>
 
